# arxiv2md

./: AGENTS.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: release.yml
skills/arxiv-to-md/: SKILL.md
src/: cache.rs  cli.rs  error.rs  html.rs  id.rs  latex.rs  lib.rs  main.rs  markdown.rs  metadata.rs  model.rs  pdf.rs  pipeline.rs
tests/: cli.rs
