[package]
name = "arxiv2md"
version = "0.1.0"
edition = "2024"
description = "Convert arXiv papers into LLM-friendly Markdown"
license = "MIT"
repository = "https://github.com/alexferrari88/arxiv2md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6"
ego-tree = "0.11"
flate2 = "1.0"
pdf-extract = "0.10"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "gzip", "brotli", "deflate", "rustls"] }
roxmltree = "0.21"
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.15"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
